# spotify_ETL

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
extract/: application.py  models.py  settings.py
extract/api/: api_client.py
extract/services/: album_service.py  artist_service.py  loader.py  titre_service.py
extract/tests/: test_parse_album.py
transform/: .env  .user.yml  dbt_project.yml  load_env.ps1  profiles.yml
transform/models/1_staging/: schema.yml  stg_albums.sql  stg_artistes.sql  stg_artistes.yml  stg_titres.sql
transform/models/2_intermediate/: int_titres_enrichis.sql
transform/models/3_mart/: artistes.sql  dashboard.sql
transform/models/3_mart/web_app/: styles.sql  titres.sql
