[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pytest (>=9.0.3,<10.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]